testing/tests/ui/macro_named_argument.stderr
error: no argument named `param3` in macro "thrice"
 --> InvalidNamedArg.html:5:3
  |
       5 | {%- call thrice(param1=2, param3=3) -%}
         |   ^ close to this token
         |
 --> tests/ui/macro_named_argument.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named argument `param1` was passed more than once
 --> <source attribute>:5:16
  |
       5 | {%- call thrice(param1=2, param1=3) -%}
         |                ^ close to this token
         |
  --> tests/ui/macro_named_argument.rs:11:10
   |
11 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: failed to parse template source
 --> <source attribute>:5:30
  |
       5 | {%- call thrice(3, param1=2) | filter(param1=12) -%}
         |                              ^ close to this token
         |
  --> tests/ui/macro_named_argument.rs:20:10
   |
20 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: named arguments must always be passed last
 --> <source attribute>:4:16
  |
       4 | {%- call thrice(param1=2, 3) -%}
         |                ^ close to this token
         |
  --> tests/ui/macro_named_argument.rs:29:10
   |
29 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot have unnamed argument (`param2`) after named argument in macro "thrice"
 --> InvalidNamedArg5.html:4:3
  |
       4 | {%- call thrice(3, param1=2) -%}
         |   ^ close to this token
         |
  --> tests/ui/macro_named_argument.rs:37:10
   |
37 | #[derive(Template)]
   |          ^^^^^^^^
   |
   = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
